<resources>
    <string name="app_name">Skin Care</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    
    <string name="action_new_schedule">알람 추가</string>
    <string name="action_new_sleep">잠</string>
    <string name="action_new_water">물</string>
    <string name="action_new_uv">차단제</string>
    <string name="action_new_note">노트 추가</string>
    <string name="action_note_accept">저장</string>
    <string name="action_type_test_accept">완료</string>
    
    <string name="action_title_note_new">메모 추가</string>
    <string name="action_title_note_modify">메모 수정</string>
    
    <!-- menu -->
    <string name="menu_home">홈</string>
    <string name="menu_schedule">스케줄</string>
    <string name="menu_schedule_settings">Schedule settings</string>
    <string name="menu_schedule_board">Schedule board</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_weather_today">오늘의 날씨</string>
    <string name="menu_weather_fun">재미있는 날씨</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">설정</string>
    <string name="menu_settings_profile">Profile Settings</string>
    <string name="menu_settings_alarm">Alarm Settings</string>
    <string name="menu_settings_popup">Popup Settings</string>
    <string name="menu_settings_type">Skin Type Settings</string>
    <string name="menu_settings_help">도움말</string>
    
    <!-- scene -->
    <string name="scene_splash">SPLASH</string>
    <string name="scene_type_choice">SKIN TYPE CHOICE</string>
    <string name="scene_type_test">SKIN TYPE TEST</string>
    <string name="scene_main">MAIN</string>
    <string name="scene_schedule_settings">SCHEDULE SETTINGS</string>
    <string name="scene_schedule_board">SCHEDULE</string>
    <string name="scene_weather_today">WEATHER TODAY</string>
    <string name="scene_weather_interesting">WEATHER FUNNY</string>
    <string name="scene_share">SHARE</string>
    <string name="scene_settings">SETTINGS</string>
    <string name="scene_settings_profile">PROFILE</string>
    <string name="scene_settings_alarm">ALRAM</string>
    <string name="scene_settings_popup">POPUP</string>
    <string name="scene_settings_type">TYPE</string>
    <string name="scene_settings_help">HELP</string>
    
    <!-- skin type -->
    <string name="type_question">당신의 피부는 어떤 타입인가요 ?</string>
    <string name="type_btn_choice">피부 타입 설정</string>
    <string name="type_btn_test">피부 타입 테스트</string>
    <string name="type_choice_oily">지성</string>
    <string name="type_choice_dry">건성</string>
    <string name="type_choice_combination">복합성</string>
    <!-- FragWeather Today -->
    <string name="tw_cur_weather">현재 날씨:</string>
    <string name="tw_today_weather">오늘 날씨:</string>
    <string name="tw_location_weather">지역:</string>
    <string name="tw_cur_temp_weather">현재 온도:</string>
    <string name="tw_hi_weather">최고 온도:</string>
    <string name="tw_low_weather">최저 온도:</string>
    
    <!-- test -->
    <string name="type_test_title">해당 항목을 선택 후 V 버튼을 눌러 주세요.</string>
    <string name="type_test_dialog_title">피부타입 설정</string>
    <string name="type_test_dialog_message">당신의 피부는 %s 타입 입니다.</string>
    <string name="type_test_dialog_ok">지정하기</string>
    <string name="type_test_dialog_cancel">다시하기</string>
    <string name="test_yes">예</string>
    <string name="test_no">아니오</string>
    
    <!-- settings -->
    <string name="settings_name">이름</string>
    <string name="settings_skin_type">피부타입</string>
    <string name="settings_photo_dialog_select">이미지 설정</string>
    <string name="settings_photo_dialog_positive">사진촬영</string>
    <string name="settings_photo_dialog_neutral">앨범선택</string>
    
    <string name="settings_alarm_dialog_select">알림음 설정</string>
    <string name="settings_popup_dialog_select">팝업 설정</string>
    
    <string name="settings_btn_skin_type">피부타입설정</string>
    <string name="settings_btn_popup">팝업설정</string>
    <string name="settings_btn_alarm">알람설정</string>
    
    <!-- FragWeather Fun -->
    
    
    
    
    <!-- FragwWeather FunSub -->
    
    <!-- Special Characters -->
    <string name="temp">℃</string>
</resources>
