<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_schedule"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_new_schedule">
        <menu>
            <group>
                <item
                    android:id="@+id/action_new_sleep"
                    android:showAsAction="never"
                    android:title="@string/action_new_sleep"/>
                <item
                    android:id="@+id/action_new_water"
                    android:showAsAction="never"
                    android:title="@string/action_new_water"/>
                <item
                    android:id="@+id/action_new_uv"
                    android:showAsAction="never"
                    android:title="@string/action_new_uv"/>
            </group>
        </menu>
    </item>

</menu>