<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/act_type_choice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/scene_type_choice"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/act_type_choice_btn_oily"
            style="?android:attr/buttonStyleInset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doChoice"
            android:text="@string/type_choice_oily" />

        <Button
            android:id="@+id/act_type_choice_btn_dry"
            style="?android:attr/buttonStyleInset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doChoice"
            android:text="@string/type_choice_dry" />

        <Button
            android:id="@+id/act_type_choice_btn_combination"
            style="?android:attr/buttonStyleInset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doChoice"
            android:text="@string/type_choice_combination" />
    </LinearLayout>

</RelativeLayout>