<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/frag_settings_skin"
        android:layout_width="@dimen/drawer_width_1"
        android:layout_height="@dimen/profile_height_1"
        android:background="@android:color/holo_blue_bright" />

    <ImageView
        android:id="@+id/frag_settings_profile"
        android:layout_width="@dimen/profile_avatar_width_1"
        android:layout_height="@dimen/profile_avatar_height_1"
        android:layout_alignBottom="@id/frag_settings_skin"
        android:layout_alignRight="@id/frag_settings_skin"
        android:layout_marginBottom="@dimen/profile_avatar_margin"
        android:layout_marginRight="@dimen/profile_avatar_margin_right"
        android:background="@android:color/white"
        android:padding="@dimen/profile_avatar_padding"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/frag_settings_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/frag_settings_skin"
        android:layout_toLeftOf="@+id/frag_settings_profile"
        android:hint="@string/settings_name"
        android:text="@string/settings_name"
        android:textSize="9pt" />

    <TextView
        android:id="@+id/frag_settings_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/frag_settings_name"
        android:layout_toLeftOf="@id/frag_settings_profile"
        android:hint="@string/settings_skin_type"
        android:text="@string/settings_skin_type"
        android:textSize="9pt" />

    <!-- button -->

    <LinearLayout
        android:id="@+id/frag_settings_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frag_settings_profile"
        android:layout_marginTop="@dimen/profile_avatar_margin_Top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/frag_settings_btn_skin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_btn_skin_type" />

        <Button
            android:id="@+id/frag_settings_btn_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_popup" />

        <Button
            android:id="@+id/frag_settings_btn_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn_alarm" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frag_settings_buttons" />

</RelativeLayout>