<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/act_splash_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/splash" />

    <!--
         ProgressBar
        android:id="@+id/act_splash_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/act_splash_title"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/splash_progress_margin"
        android:indeterminateOnly="true" /
    -->

    <LinearLayout
        android:id="@+id/act_splash_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_question"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/type_buttonbar_margin"
            android:layout_marginLeft="@dimen/type_buttonbar_margin"
            android:layout_marginRight="@dimen/type_buttonbar_margin"
            android:layout_marginTop="@dimen/type_buttonbar_marginTop"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/act_splash_btn_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="gotoTypeChoice"
                    android:scaleType="centerInside"
                    android:src="@drawable/test_splashbtn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_btn_choice"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/act_splash_btn_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:onClick="gotoTypeTest"
                    android:scaleType="centerInside"
                    android:src="@drawable/test_splashbtn2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_btn_test"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>